--- a/estilo.css
+++ b/estilo.css
@@ -15,6 +15,8 @@ h1 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 img {
+    width: 100px;
+    height: 100px;
     display: block;
     margin: 20px auto;
     max-width: 300px;
